# ChessAI

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  GTEST_README.md  README.md  debug_eval.cpp  run_tests.sh  test_uci_castling.bat
BBC/: README.md
BBC/src/: Attacks.c  Attacks.h  BitBoard.c  BitBoard.h  Board.c  Board.h  Evaluation.c  Evaluation.h  Hash.c  Hash.h  MagicBitboards.c  MagicBitboards.h  MoveGeneration.c  MoveGeneration.h  Perft.c  Perft.h  Random.c  Random.h  Search.c  Search.h  TimeControl.c  TimeControl.h  bbc.c  main.c  readme.md  test_bbc.c
examples/: create_position.cpp  generate_moves.cpp  perft.cpp  print_book.cpp  search_best_move.cpp
src/: BBCStyleEngine.cpp  BBCStyleEngine.h  BitUtils.h  Board.cpp  Board.h  Engine.cpp  Engine.h  EngineEvaluation.cpp  EngineSearch.cpp  EvalParams.h  Example.cpp  FastMoveGenerator.cpp  FastMoveGenerator.h  FastPerft.cpp  FastPerft.h  IllegalMoveTests.cpp  IncrementalBoard.cpp  IncrementalBoard.h  KnightMoveTests.cpp  MVVLVA.h  Magic.cpp  Magic.h  MoveEncoding.cpp  MoveEncoding.h  MoveGenerator.cpp  MoveGenerator.cpp.fast  MoveGenerator.h  MoveGenerator.h.fast  MoveGeneratorNew.cpp  MoveGeneratorNew.h  MoveGeneratorUtils.cpp  OpeningBook.cpp  OpeningBook.h  PawnMoveTests.cpp  Perft.cpp  Perft.h  PolyglotRandom.h  PrintMoves.cpp  PrintMoves.h  Tablebase.cpp  (+9 more)
test/: A2A3Analyzer.cpp  A2A4Analysis.cpp  ActivityBonusEvaluationTest.cpp  AllEnPassant.cpp  AnalyzeDepth2Position.cpp  AnalyzeE1E2.cpp  AnalyzeE5F7.cpp  AnalyzeE5F7Breakdown.cpp  AnalyzeE8E7.cpp  AnalyzeH1H7Position.cpp  AnalyzeH1H8.cpp  AnalyzePosition3.cpp  AphelionFastPerftTest.cpp  AphelionPerftTest.cpp  AttackCheck.cpp  B4B3Analysis.cpp  BBCComparisonTest.cpp  BBCMonolithicPerftTest.c  BBCMonolithicTest.cpp  BBCPerftTest.cpp  BBCSpeedComparison.cpp  BBCStyleEngineTest.cpp  BBCStylePerformanceTest.cpp  BlackCastlingAnalysis.cpp  BlackCastlingTest.cpp  BoardPieceTest.cpp  BoardTest.cpp  BoardTestGtest.cpp  BugHuntE8E7.cpp  CastlingAnalysis.cpp  CastlingAttackTest.cpp  CastlingBugInvestigation.cpp  CastlingCheck.cpp  CastlingDebug.cpp  CastlingDebugNew.cpp  CastlingDepth2Analysis.cpp  CastlingSquareAttackTest.cpp  CheckBlackCastling.cpp  CheckLegalMoves.cpp  CheckPosition3.cpp  (+136 more)
